[package]
name = "oscillateur_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oscillateur_lib"
crate-type = ["rlib", "cdylib"]  # `rlib` pour Rust, `cdylib` pour interopérabilité FFI si nécessaire

[dependencies]