[package]
name = "projet_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oscillateur_lib = { path = "../oscillateur_lib" }
cpal = "0.15.3"
anyhow = "1.0.82"
dasp = { version = "0.11", features = ["signal"] }
crossbeam = "0.8.4"