[package]
name = "projet_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.3"
anyhow = "1.0.82"
dasp = { version = "0.11", features = ["signal"] }
crossbeam = "0.8.4"
oscillator_module = { path = "../oscillator_module" }
Oscilator_Mod_sin = { path = "../Oscilator_Mod_sin" }
Oscilator_Mod_square = {path = "../Oscilator_Mod_square"}
Oscilator_Mod_saw = {path = "../Oscilator_Mod_saw"}
filtre_PasseHaut_Mod = {path = "../filtre_PasseHaut_Mod"}
filtre_PasseBas_mod = {path = "../filtre_PasseBas_mod"}